# REMEMVR-1

./: .gitignore  .ignore.txt  conflict_fixes_summary_rq58-13.md  context_manager_report.json  pyproject.toml  remaining_conflicts_rq58-13.md  rq8_tool_bugs_report.md  workflow_execution_report_rq58-13.md
.archive/thesis/: ANALYSES_CH6.md  ANALYSES_CH7.md
.archive/v1/: analysis.py  data.py  irt.py  params.py  plots.py  tools.py  utility.py
.claude/: CLAUDE.md
.claude/agents/: context_finder.md  context_manager.md  g_code.md  g_conflict.md  g_debug.md  rq_analysis.md  rq_audit.md  rq_builder.md  rq_concept.md  rq_fixer.md  rq_inspect.md  rq_planner.md  rq_plots.md  rq_results.md  rq_scholar.md  rq_specification.md  rq_stats.md  rq_tools.md  rq_validate.md
.claude/commands/: refresh.md  save.md
cog/: cogtests.py
cog/BVMT/: BVMT.py  (+8 more)
data/: README.md  data.py  examples.py  master.xlsx  variables.csv  variables.xlsx
docs/: README.md  cognitive_tests.md  data_structure.md  docs_index.md  tools_catalog.md  tools_inventory.md  tools_status.csv
results/: MODEL_SELECTION_SUMMARY.md  models.md  models.tsv
tests/: __init__.py  conftest.py  test_extract_marginal_age_slopes_by_domain.py  test_irt_ctt_convergence_tools.py  test_model_selection.py  test_piecewise_tools.py  test_plotting.py  test_variance_decomposition.py
thesis/: README.md  chapters.md  introduction.md  methods.md  rationale.md
tools/: README.md  __init__.py  analysis_ctt.py  analysis_irt.py  analysis_lmm.py  config.py  model_averaging.py  plotting.py  validation.py  variance_decomposition.py
(+1874 files in other folders)
