[tool.poetry]
name = "rememvr"
version = "0.1.0"
description = ""
authors = ["Richard <richard@etai.app>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.3.3"
numpy = "^2.3.5"
statsmodels = "^0.14.5"
scipy = "^1.16.3"
matplotlib = "^3.10.7"
seaborn = "^0.13.2"
pyyaml = "^6.0.3"
deepirtools = "^0.2.1"
scikit-learn = "^1.7.2"


[tool.poetry.group.dev.dependencies]
pytest = "^9.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
